# laser_geometry

./: CHANGELOG.rst  CMakeLists.txt  CODEOWNERS  laser_geometry-extras.cmake  mainpage.dox  manifest.xml  package.xml  pytest.ini  setup.py
include/laser_geometry/: laser_geometry.h  laser_geometry.hpp  laser_processor.h  laser_scan_geometry.h  visibility_control.hpp
src/: laser_geometry.cpp  laser_processor.cpp  laser_scan.cc  laser_scan_geometry.cpp
src/laser_geometry/: __init__.py  laser_geometry.py
test/: projection_test.cpp  projection_test.py
